--- a/app/assets/stylesheets/pages/main.scss
+++ b/app/assets/stylesheets/pages/main.scss
@@ -30,17 +30,6 @@ a {
   left: 0;
 }
 
-.page-header {
-  max-width: $max_width_content;
-  margin: auto;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  border-bottom: 2px solid $gray;
-}
-
 .jumbotron {
   background-color: $color;
   max-width: $max_width_content;
@@ -50,14 +39,6 @@ a {
 .jumbotron-fluid {
   padding-top: 0;
   padding-bottom: 0;
-}
-
-.func-btns {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 315px;
 }
 
 .mn-vd {
@@ -73,46 +54,6 @@ a {
   }
 }
 
-.main-btn {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-
-  text-align: center;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: $color;
-  border: 1px solid;
-  border-radius: 4px;
-  margin: 20px auto;
-  padding: 15px 36px;
-
-  min-width: 187px;
-  max-width: 420px;
-}
-
-.btn-outline-gray {
-  border-color: $gray;
-  color: $color;
-
-  &:hover {
-    color: $success;
-    border-color: $success;
-  }
-}
-
-.btn-outline-green {
-  border-color: $success;
-  color: $success;
-
-  &:hover {
-    background-color: $success;
-    color: white;
-    border-color: $success;
-  }
-}
-
 .logo {
   font-size: 24px;
   color: $color;
@@ -120,20 +61,6 @@ a {
 
   &:hover {
     color: $success;
-  }
-}
-
-.tab {
-  text-transform: uppercase;
-  font-size: 14px;
-  padding: 33px 15px;
-  color: $color;
-  border-bottom: 3px solid transparent;
-  @include transition(all 0.5s ease-in-out);
-
-  &:hover {
-    color: $color;
-    border-bottom: 3px solid $success;
   }
 }
 
@@ -315,7 +242,9 @@ body:where(.admin)::before {
   }
 
   .admin-table-links {
-    a, form {
+
+    a,
+    form {
       color: $success;
 
       &:hover {
